# go/api/model_ocio_display_view.go
@@ -1,129 +1,0 @@
-/*
-OpenAPI ColorBox
-
-This is a REST API for the AJA ColorBox product.
-
-The version of the OpenAPI document: 1.0.0
-Contact: support@aja.com
-
-NOTE: This code is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-      Do not edit this code manually.
-
-Copyright (C) 2020 AJA Video Systems Inc.  All rights reserved.
-*/
-
-package openapi
-
-import (
-	"encoding/json"
-	"fmt"
-)
-
-// OcioDisplayView the model 'OcioDisplayView'
-type OcioDisplayView string
-
-// List of OcioDisplayView
-const (
-	OCIODISPLAYVIEW_REC_1886_REC_709___DISPLAY_ACES_1_0___SDR_VIDEO OcioDisplayView = "Rec.1886 Rec.709 - Display/ACES 1.0 - SDR Video"
-	OCIODISPLAYVIEW_REC_2100_HLG___DISPLAY_ACES_1_1___HDR_VIDEO__1000_NITS__REC_2020_LIM OcioDisplayView = "Rec.2100-HLG - Display/ACES 1.1 - HDR Video (1000 nits & Rec.2020 lim)"
-	OCIODISPLAYVIEW_REC_2100_PQ___DISPLAY_ACES_1_1___HDR_VIDEO__1000_NITS__REC_2020_LIM OcioDisplayView = "Rec.2100-PQ - Display/ACES 1.1 - HDR Video (1000 nits & Rec.2020 lim)"
-	OCIODISPLAYVIEW_REC_2100_PQ___DISPLAY_ACES_1_1___HDR_VIDEO__2000_NITS__REC_2020_LIM OcioDisplayView = "Rec.2100-PQ - Display/ACES 1.1 - HDR Video (2000 nits & Rec.2020 lim)"
-	OCIODISPLAYVIEW_REC_2100_PQ___DISPLAY_ACES_1_1___HDR_VIDEO__4000_NITS__REC_2020_LIM OcioDisplayView = "Rec.2100-PQ - Display/ACES 1.1 - HDR Video (4000 nits & Rec.2020 lim)"
-	OCIODISPLAYVIEW_ST2084_P3_D65___DISPLAY_ACES_1_1___HDR_VIDEO__1000_NITS__P3_LIM OcioDisplayView = "ST2084-P3-D65 - Display/ACES 1.1 - HDR Video (1000 nits & P3 lim)"
-	OCIODISPLAYVIEW_ST2084_P3_D65___DISPLAY_ACES_1_1___HDR_VIDEO__2000_NITS__P3_LIM OcioDisplayView = "ST2084-P3-D65 - Display/ACES 1.1 - HDR Video (2000 nits & P3 lim)"
-	OCIODISPLAYVIEW_ST2084_P3_D65___DISPLAY_ACES_1_1___HDR_VIDEO__4000_NITS__P3_LIM OcioDisplayView = "ST2084-P3-D65 - Display/ACES 1.1 - HDR Video (4000 nits & P3 lim)"
-	OCIODISPLAYVIEW_ST2084_P3_D65___DISPLAY_ACES_1_1___HDR_CINEMA__108_NITS__P3_LIM OcioDisplayView = "ST2084-P3-D65 - Display/ACES 1.1 - HDR Cinema (108 nits & P3 lim)"
-)
-
-// All allowed values of OcioDisplayView enum
-var AllowedOcioDisplayViewEnumValues = []OcioDisplayView{
-	"Rec.1886 Rec.709 - Display/ACES 1.0 - SDR Video",
-	"Rec.2100-HLG - Display/ACES 1.1 - HDR Video (1000 nits & Rec.2020 lim)",
-	"Rec.2100-PQ - Display/ACES 1.1 - HDR Video (1000 nits & Rec.2020 lim)",
-	"Rec.2100-PQ - Display/ACES 1.1 - HDR Video (2000 nits & Rec.2020 lim)",
-	"Rec.2100-PQ - Display/ACES 1.1 - HDR Video (4000 nits & Rec.2020 lim)",
-	"ST2084-P3-D65 - Display/ACES 1.1 - HDR Video (1000 nits & P3 lim)",
-	"ST2084-P3-D65 - Display/ACES 1.1 - HDR Video (2000 nits & P3 lim)",
-	"ST2084-P3-D65 - Display/ACES 1.1 - HDR Video (4000 nits & P3 lim)",
-	"ST2084-P3-D65 - Display/ACES 1.1 - HDR Cinema (108 nits & P3 lim)",
-}
-
-func (v *OcioDisplayView) UnmarshalJSON(src []byte) error {
-	var value string
-	err := json.Unmarshal(src, &value)
-	if err != nil {
-		return err
-	}
-	enumTypeValue := OcioDisplayView(value)
-	for _, existing := range AllowedOcioDisplayViewEnumValues {
-		if existing == enumTypeValue {
-			*v = enumTypeValue
-			return nil
-		}
-	}
-
-	return fmt.Errorf("%+v is not a valid OcioDisplayView", value)
-}
-
-// NewOcioDisplayViewFromValue returns a pointer to a valid OcioDisplayView
-// for the value passed as argument, or an error if the value passed is not allowed by the enum
-func NewOcioDisplayViewFromValue(v string) (*OcioDisplayView, error) {
-	ev := OcioDisplayView(v)
-	if ev.IsValid() {
-		return &ev, nil
-	} else {
-		return nil, fmt.Errorf("invalid value '%v' for OcioDisplayView: valid values are %v", v, AllowedOcioDisplayViewEnumValues)
-	}
-}
-
-// IsValid return true if the value is valid for the enum, false otherwise
-func (v OcioDisplayView) IsValid() bool {
-	for _, existing := range AllowedOcioDisplayViewEnumValues {
-		if existing == v {
-			return true
-		}
-	}
-	return false
-}
-
-// Ptr returns reference to OcioDisplayView value
-func (v OcioDisplayView) Ptr() *OcioDisplayView {
-	return &v
-}
-
-type NullableOcioDisplayView struct {
-	value *OcioDisplayView
-	isSet bool
-}
-
-func (v NullableOcioDisplayView) Get() *OcioDisplayView {
-	return v.value
-}
-
-func (v *NullableOcioDisplayView) Set(val *OcioDisplayView) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableOcioDisplayView) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableOcioDisplayView) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableOcioDisplayView(val *OcioDisplayView) *NullableOcioDisplayView {
-	return &NullableOcioDisplayView{value: val, isSet: true}
-}
-
-func (v NullableOcioDisplayView) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableOcioDisplayView) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
